fix white space

--- a/css/custom.css
+++ b/css/custom.css
@@ -320,6 +320,10 @@ footer a:hover {
 		padding-top: 60px;
 	}
 
+/*	#hero {
+		height: auto;
+		padding-bottom: 100px;
+	}*/
 
 	footer {
 		height: auto;
